#2: refactoring a page with types of chest exercises

--- a/pages/all_type_exercises.html
+++ b/pages/all_type_exercises.html
@@ -52,7 +52,7 @@
             </a>
         </div>
         <div class="item">
-            <a href="grud_exercises.html">
+            <a href="chest_exercises.html">
                 <img src="../images/grud.jpg" alt="Грудь">
                 <div class="slideText">Грудь</div>
             </a>
