--- a/pages/chest_exercises.html
+++ b/pages/chest_exercises.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
+    <script src="../scripts/script.js"></script>
     <title>Упражнения на грудь</title>
 </head>
 <body>
@@ -10,8 +12,8 @@
         <a href="index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-        <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
-        <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
+        <div class="nav"><a href="all_type_exercises.html"> Упражнения </a></div>
+        <div class="nav"><a href='all_fitness_centers.html'> Фитнес-центры </a></div>
         <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
