#2: refactoring a page with types exercises

--- a/pages/all_type_exercises.html
+++ b/pages/all_type_exercises.html
@@ -21,7 +21,6 @@
         <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
     </div>
 </div>
-
 <div class="central">
     <div class="slider">
         <div class="item">
@@ -30,14 +29,12 @@
                 <div class="slideText">Спина</div>
             </a>
         </div>
-
         <div class="item">
             <a href="ruki_exercises.html">
                 <img src="../images/arms.jpg" alt="Руки">
                 <div class="slideText">Руки</div>
             </a>
         </div>
-
         <div class="item">
             <a href="nogy_exercises.html">
                 <img src="../images/legs.jpg" alt="Ноги">
@@ -67,17 +64,15 @@
         <a class="next_item" onclick="plusSlide()">&#10095;</a>
 
     </div>
-
     <div class="slider-dots">
         <span class="slider-dots_item" onclick="currentSlide(1)"></span>
         <span class="slider-dots_item" onclick="currentSlide(2)"></span>
         <span class="slider-dots_item" onclick="currentSlide(3)"></span>
         <span class="slider-dots_item" onclick="currentSlide(4)"></span>
         <span class="slider-dots_item" onclick="currentSlide(5)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(6)"></span>
     </div>
-
 </div>
-
 <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
         <a href="#">Связаться с нами</a><br><br>
@@ -85,5 +80,4 @@
 
 </div>
 </body>
-
 </html>
