--- a/pages/second_page.html
+++ b/pages/second_page.html
@@ -18,7 +18,7 @@
       <div class="nav"><a href="#"> Упражнения </a></div>
       <div class="nav"><a href="#"> Фитнес-центры </a></div>
       <div class="nav"><a href="#"> Тренеры </a></div>
-      <div class="nav"><a href="#"> ссылка </a></div>
+      <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="share_bar">
       <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
