--- a/pages/exercises/exercise8.html
+++ b/pages/exercises/exercise8.html
@@ -10,12 +10,13 @@
 <body>
 <div class="top_menu">
     <div class="logo">
-        <a href="../index.html"> <img src="../../images/logo.png" alt="logo"> </a>
+        <a href="../../index.html"> <img src="../../images/logo.png" alt="logo"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="../all_type_exercises.html"> Упражнения </a> </div>
-      <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
-      <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
+        <div class="nav"><a href="../all_type_exercises.html"> Упражнения </a></div>
+        <div class="nav"><a href='../all_fitness_centers.html'> Фитнес-центры </a></div>
+        <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
+        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="icon_menu" onclick="clickMenu()"><img src="../../images/menu.png" alt="menu"></div>
     <div class="share_bar">
