--- a/pages/press_exercises.html
+++ b/pages/press_exercises.html
@@ -12,12 +12,13 @@
 <body>
 <div class="top_menu">
     <div class="logo">
-        <a href="index.html"> <img src="../images/logo.png"> </a>
+        <a href="../index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
         <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
         <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
         <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
+        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="share_bar">
         <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
