#2 refactoring all pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
-    <script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+    <script src="script/script.js"></script>
     <title></title>
 </head>
 <body>
@@ -15,7 +16,6 @@
         <div class="nav"><a href="pages/all_type_exercises.html"> Упражнения </a></div>
         <div class="nav"><a href='pages/all_fitness_centers.html'> Фитнес-центры </a></div>
         <div class="nav"><a href="pages/all_treners.html"> Тренеры </a></div>
-        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="share_bar">
         <div class="share"><a href="#"> <img src="images/vk.png"> </a></div>
@@ -33,7 +33,7 @@
         <a class="start_ref" href="#">Попробуй тренировки</a>
     </div>
     <div class="start_sport_ref">
-        <a href="#">СТАРТ</a>
+        <a href="pages/day1.html">СТАРТ</a>
     </div>
 </div>
 <div class="change_lesson">
