--- a/pages/exercises/exercise10.html
+++ b/pages/exercises/exercise10.html
@@ -5,7 +5,7 @@
     <link href="../../styles/style.css" rel="stylesheet" type="text/css">
     <title>Упражнение «Велосипед»</title>
     <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
-    <script src="../../scripts/script.js"></script>
+      <script src="../../script/script.js"></script>
 </head>
 <body>
 <div class="top_menu">
@@ -16,7 +16,6 @@
         <div class="nav"><a href="../all_type_exercises.html"> Упражнения </a></div>
         <div class="nav"><a href='../all_fitness_centers.html'> Фитнес-центры </a></div>
         <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
-        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="icon_menu" onclick="clickMenu()"><img src="../../images/menu.png" alt="menu"></div>
     <div class="share_bar">
