--- a/pages/press_exercises.html
+++ b/pages/press_exercises.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <script src="../scripts/script.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+    <script src="../script/script.js"></script>
     <title>Упражнения на пресс</title>
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <title></title>
-    <script src="../scripts/script.js"></script>
 </head>
 <body>
 <div class="top_menu">
@@ -18,7 +16,6 @@
         <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
         <div class="nav"> <a href='all_fitness_centers.html'> Фитнес-центры </a> </div>
         <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
-        <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="share_bar">
         <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
