--- a/pages/day1.html
+++ b/pages/day1.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
-    <link href="../../styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title></title>
-    <script src="../../scripts/script.js">
+    <script src="../script/script.js"></script>
+    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+</head>
+<body>
 
-    </script>
-  </head>
-  <body>
-
-  <div class="top_menu">
+<div class="top_menu">
     <div class="logo">
-      <a href="#"> <img src="../../images/logo.png"> </a>
+        <a href="#"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="../all_exercises.html"> Упражнения </a> </div>
-      <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
-      <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
+        <div class="nav"><a href="all_exercises.html"> Упражнения </a></div>
+        <div class="nav"><a href='all_fitness_centers.html'> Фитнес-центры </a></div>
+        <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
-      <div class="share"><a href="#"> <img src="../../images/vk.png"> </a></div>
-      <div class="share"><a href="#"> <img src="../../images/instagram.png"> </a></div>
+        <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
+      <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
     </div>
   </div>
 
@@ -52,8 +51,8 @@
        </div> -->
 
      </div>
-     <div class="past_lesson"><a href="katya.html">Предыдущий</a></div>
-     <div class="next_lesson"><a href="max.html">Следующий</a></div>
+     <div class="past_lesson"><a href="traners/katya.html">Предыдущий</a></div>
+     <div class="next_lesson"><a href="traners/max.html">Следующий</a></div>
   <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
       <a href="#">Связаться с нами</a><br><br>
