--- a/pages/second_page.html
+++ b/pages/second_page.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title></title>
-    <script src="../scripts/script.js">
+    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+    <script src="../script/script.js">
 
     </script>
   </head>
@@ -18,7 +19,6 @@
       <div class="nav"><a href="#"> Упражнения </a></div>
       <div class="nav"><a href="#"> Фитнес-центры </a></div>
       <div class="nav"><a href="#"> Тренеры </a></div>
-      <div class="nav"><a href="#"> Полезность спорта </a></div>
     </div>
     <div class="share_bar">
       <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
