refactoring all items and add new exercises

--- a/pages/all_exercises.html
+++ b/pages/all_exercises.html
@@ -91,7 +91,36 @@
                 <div class="slideText">Жим в Смите лежа</div>
             </a>
         </div>
-
+        <div class="item">
+            <a href="exercises/exercise12.html">
+                <img src="../images/tyaga_kinga.jpg" alt="Тяга Кинга">
+                <div class="slideText">Тяга Кинга</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise13.html">
+                <img src="../images/pryzhki-na-skakalke.jpg" alt="Прыжки на скакалке">
+                <div class="slideText">Прыжки на скакалке</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise14.html">
+                <img src="../images/podem-na-noski-stoya-smith.jpeg" alt="Подъем на носки стоя">
+                <div class="slideText">Подъем на носки стоя</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise15.html">
+                <img src="../images/franzuzski_ghim.jpg" alt="Французский жим">
+                <div class="slideText">Французский жим</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise16.html">
+                <img src="../images/zhim-gantelei-lezha-ishodnaya.jpeg" alt="Жим лежа">
+                <div class="slideText">Жим гантелей лежа</div>
+            </a>
+        </div>
         <a class="prev_item" onclick="minusSlide()">&#10094;</a>
         <a class="next_item" onclick="plusSlide()">&#10095;</a>
 
@@ -109,6 +138,11 @@
         <span class="slider-dots_item" onclick="currentSlide(9)"></span>
         <span class="slider-dots_item" onclick="currentSlide(10)"></span>
         <span class="slider-dots_item" onclick="currentSlide(11)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(12)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(13)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(14)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(15)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(16)"></span>
     </div>
 
 </div>
