--- a/pages/day1.html
+++ b/pages/day1.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8">
     <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title></title>
-    <script src="../script/script.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
-</head>
-<body>
+    <script src="../script/script.js">
 
-<div class="top_menu">
+    </script>
+  </head>
+  <body>
+
+  <div class="top_menu">
     <div class="logo">
-        <a href="#"> <img src="../images/logo.png"> </a>
+      <a href="../index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-        <div class="nav"><a href="all_exercises.html"> Упражнения </a></div>
-        <div class="nav"><a href='all_fitness_centers.html'> Фитнес-центры </a></div>
-        <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
+      <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="all_fitness_centers.html"> Фитнес-центры </a> </div>
+      <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
-        <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
+      <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
       <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
     </div>
   </div>
@@ -30,18 +31,22 @@
 <img src="../images/book.png" alt="">
 
        <div class="central_block_exercise">
-        <br><td>Хорошилов Анастас</td><br>
-        <br><td>Лучший в своем роде тренер</td><br>
-        <br><td>Тусер по жизни</td><br>
-        <br><td>ЗОЖ - пиздежь</td><br>
+        <br><td>Кошка</td><br><br>
+        <br><td>Лодочка</td><br><br>
+        <br><td>Супермен</td><br><br>
+        <br><td>Велосипед</td><br><br>
+        <br><td>Скручивания на пресс</td><br><br>
+        <br><td>Растяжка</td><br>
         <br>
        </div>
 
        <div class="central_block_times">
-         <br><td>Хорошилов Анастас</td><br>
-         <br><td>Лучший в своем роде тренер</td><br>
-         <br><td>Тусер по жизни</td><br>
-         <br><td>ЗОЖ - пиздежь</td><br>
+         <br><td>Делаем непрерывно в течение минуты. Перерыв 30 секунд. 2 подхода</td><br>
+         <br><td>Делаем непрерывно в течение минуты. Перерыв 30 секунд. 2 подхода</td><br>
+         <br><td>Делаем непрерывно в течение 40 секунд. Перерыв 40 секунд. 2 подхода</td><br>
+         <br><td>Делаем непрерывно в течение 30 секунд. Перерыв 30 секунд. 2 подхода</td><br>
+         <br><td>Непрерывно в течение минуты. Перерыв 30 секунд. 3 подхода</td><br>
+         <br><td>Выберте 5 любых упражнений на растяжку. Время выполнения 5-10 минут</td><br>
          <br>
        </div>
        </div>
@@ -51,8 +56,7 @@
        </div> -->
 
      </div>
-     <div class="past_lesson"><a href="traners/katya.html">Предыдущий</a></div>
-     <div class="next_lesson"><a href="traners/max.html">Следующий</a></div>
+     <div class="next_lesson"><a href="day2.html">Следующий</a></div>
   <div class="footer">
     <p><a href="#">Политика конфиденциальности</a><br>
       <a href="#">Связаться с нами</a><br><br>
