--- a/pages/nogy_exercises.html
+++ b/pages/nogy_exercises.html
@@ -10,7 +10,7 @@
 <body>
 <div class="top_menu">
     <div class="logo">
-        <a href="#"> <img src="../images/logo.png"> </a>
+        <a href="../index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
         <div class="nav"> <a href="all_type_exercises.html"> Упражнения </a> </div>
@@ -26,12 +26,23 @@
 <div class="central">
     <div class="slider">
         <div class="item">
-            <a href="exercises/exercise1.html">
-                <img src="../images/lesson1.jpg" alt="Скручивания">
-                <div class="slideText">Скручивания</div>
+            <a href="exercises/exercise12.html">
+                <img src="../images/tyaga_kinga.jpg" alt="Тяга Кинга">
+                <div class="slideText">Тяга Кинга</div>
             </a>
         </div>
-
+         <div class="item">
+            <a href="exercises/exercise13.html">
+                <img src="../images/pryzhki-na-skakalke.jpg" alt="Прыжки на скакалке">
+                <div class="slideText">Прыжки на скакалке</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="exercises/exercise14.html">
+                <img src="../images/podem-na-noski-stoya-smith.jpeg" alt="Подъем на носки стоя">
+                <div class="slideText">Подъем на носки стоя</div>
+            </a>
+        </div>
         <a class="prev_item" onclick="minusSlide()">&#10094;</a>
         <a class="next_item" onclick="plusSlide()">&#10095;</a>
 
@@ -39,6 +50,8 @@
 
     <div class="slider-dots">
         <span class="slider-dots_item" onclick="currentSlide(1)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(2)"></span>
+         <span class="slider-dots_item" onclick="currentSlide(3)"></span>
     </div>
 
 </div>
