--- a/pages/ruki_exercises.html
+++ b/pages/ruki_exercises.html
@@ -26,9 +26,15 @@
 <div class="central">
     <div class="slider">
         <div class="item">
-            <a href="exercises/exercise1.html">
-                <img src="../images/lesson1.jpg" alt="Скручивания">
-                <div class="slideText">Скручивания</div>
+            <a href="exercises/exercise15.html">
+                <img src="../images/franzuzski_ghim.jpg" alt="Французский жим">
+                <div class="slideText">Французский жим</div>
+            </a>
+        </div>
+         <div class="item">
+            <a href="exercises/exercise16.html">
+                <img src="../images/zhim-gantelei-lezha-ishodnaya.jpeg" alt="жим лежа">
+                <div class="slideText">Жим гантелей лежа</div>
             </a>
         </div>
         <a class="prev_item" onclick="minusSlide()">&#10094;</a>
@@ -38,6 +44,7 @@
 
     <div class="slider-dots">
         <span class="slider-dots_item" onclick="currentSlide(1)"></span>
+        <span class="slider-dots_item" onclick="currentSlide(2)"></span>
     </div>
 
 </div>
