--- a/pages/day2.html
+++ b/pages/day2.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href="../../styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
     <title></title>
-    <script src="../../scripts/script.js">
+    <script src="../script/script.js">
 
     </script>
   </head>
@@ -12,19 +12,18 @@
 
   <div class="top_menu">
     <div class="logo">
-      <a href="index.html"> <img src="../../images/logo.png"> </a>
+      <a href="../index.html"> <img src="../images/logo.png"> </a>
     </div>
     <div class="navigation_bar">
-      <div class="nav"> <a href="../all_exercises.html"> Упражнения </a> </div>
-      <div class="nav"> <a href='../all_fitness_centers.html'> Фитнес-центры </a> </div>
-      <div class="nav"><a href="../all_treners.html"> Тренеры </a></div>
+      <div class="nav"> <a href="all_exercises.html"> Упражнения </a> </div>
+      <div class="nav"> <a href="all_fitness_centers.html"> Фитнес-центры </a> </div>
+      <div class="nav"><a href="all_treners.html"> Тренеры </a></div>
     </div>
     <div class="share_bar">
-      <div class="share"><a href="#"> <img src="../../images/vk.png"> </a></div>
-      <div class="share"><a href="#"> <img src="../../images/instagram.png"> </a></div>
+      <div class="share"><a href="#"> <img src="../images/vk.png"> </a></div>
+      <div class="share"><a href="#"> <img src="../images/instagram.png"> </a></div>
     </div>
   </div>
-
   <div class="central_block">
 
 <div class="central_block__book">
