--- a/pages/exercises/exercise1.html
+++ b/pages/exercises/exercise1.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link href="../../style/style.css" rel="stylesheet" type="text/css">
+    <link href="../../styles/style.css" rel="stylesheet" type="text/css">
     <title>Скручивания</title>
     <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
     <script src="../../script/script.js"></script>
@@ -24,7 +24,7 @@
         <div class="share"><a href="#"> <img src="../../images/instagram.png" alt="instagram"> </a></div>
     </div>
 </div>
-<div class="past_lesson"><a href="exercise11.html">Предыдущее</a></div>
+<div class="past_lesson"><a href="exercise16.html">Предыдущее</a></div>
 <div class="next_lesson"><a href="exercise2.html">Следущее</a></div>
 <div class="main_info">
     <div class="main_lesson">
